# MUSS

./: .gitignore  Pipfile  README.md  _config.yml  build_mdcas.py  build_riar_lab.py  check_feature_set.py  compare_placement.py  compute_metrics.py  dist.py  download_data.py  get_predictions.py  nonwear.feature.csv  pack_data.py  prepare_class_set.py  prepare_feature_set.py  prepare_validation_set.py  preprocess_dataset.py  publication_figures.py  pyproject.toml  release.py  reproduce.py  requirements.txt  run_custom_model.py  run_on_new_dataset.py  run_saved_model.py  run_validation_experiments.py  summarize_predictions.py  train_and_save_model.py  train_custom_model.py  train_test_split.py
_layouts/: default.html
assets/css/: style.scss
experiments/: summarize_scv.py
helper/: annotation_processor.py  log.py  preprocess.py  semantic_similarity.py  spadeslab_class_labeler.py  svm_model.py  utils.py
steps/: __init__.py  compute_metrics.py  pack_data.py  prepare_class_set.py  prepare_feature_set.py  prepare_validation_set.py  preprocess_dataset.py  publication_figures.py  run_validation_experiments.py
