[tool.poetry]
name = "muss"
version = "1.2.0"
description = "Source codes to reproduce results published in Posture and Physical Activity Detection: Impact of Number of Sensors and Feature Type (doi:10.1249/MSS.0000000000002306)"
authors = ["Qu TAng <tang.q@northeastern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
clize = "^4.1.1"
matplotlib = "^3.2.0"
wget = "^3.2"
graphviz = {version = "^0.13.2", optional = true}
padar-converter = {git = "https://github.com/qutang/padar_converter.git"}
padar-parallel = {git = "https://github.com/qutang/padar_parallel.git"}
padar-features = {git = "https://github.com/qutang/padar_features.git"}
arus = "0.6.2"
dask = {extras = ["delayed"], version = "^2.11.0"}
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
